Jira-ID: CRNT-25747 - minor adjustment to avoid vertical scrollbar in most cases
git-svn-id: http://emeafrazerg/svn/ipp/product/trunk/stardust/ui.web@61875 8100b5e0-4d52-466c-ae9c-bdeccbdeaf6b

--- a/web-modeler/src/main/resources/META-INF/xhtml/css/lightdust.css
+++ b/web-modeler/src/main/resources/META-INF/xhtml/css/lightdust.css
@@ -433,7 +433,7 @@ div#canvas {
 
 div#scrollpane {
 	background: white;
-	height: 550px;
+	height: 450px;
 	overflow: auto;
 	border: none;
 	z-index: 10;
